@@ -2,7 +2,7 @@ use strict;
 use warnings;
 use WTSI::NPG::iRODS;
 use English qw(-no_match_vars);
-use Test::More tests => 12;
+use Test::More tests => 13;
 use File::Temp qw/ tempfile tempdir/;
 use File::Basename qw/ basename /;
 use t::util;
@@ -27,21 +27,23 @@ my $irods = WTSI::NPG::iRODS->new(environment          => \%ENV,
                                  ); 
 
 my $tmpdir          = tempdir( CLEANUP => 1 );
-my ($fh, $filename) = tempfile(DIR => $tmpdir);
+my ($fh, $filename) = tempfile(DIR => $tmpdir,SUFFIX => '_npg_library_merge');
 chmod 0775, $filename; 
 
 my $chemistry = ['ALXX','CCXX'];
 my $r = npg_seq_melt::merge::generator->new(
-    merge_cmd => $filename,
-    dry_run   => 1,
-    lsf_runtime_limit => 720,
-    restrict_to_chemistry => $chemistry,
-    irods     => $irods);
+    merge_cmd               => $filename,
+    dry_run                 => 1,
+    lsf_runtime_limit       => 720,
+    restrict_to_chemistry   => $chemistry,
+    minimum_component_count => 2,
+    run_dir                 => q[test_dir],
+    irods                   => $irods);
 
 is ($r->verbose,1,q[verbose mode set when dry_run]);
 is ($r->default_root_dir,'/seq/illumina/library_merge/',q[Default iRODS root dir ok]);
     $r->default_root_dir($IRODS_WRITE_PATH);
-is ($r->minimum_component_count,'6', 'minimum_component_count is 6');
+is ($r->minimum_component_count,'2', 'minimum_component_count is 2');
 is ($r->lsf_num_processors,'3', 'lsf_num_processors is 3');
 is ($r->lsf_runtime_limit,'720', 'lsf_runtime_limit set to 720 minutes');
 is ($r->restrict_to_chemistry,$chemistry,'ALXX and CCXX are HiSeqX');
@@ -51,7 +53,6 @@ isa_ok ($base_obj->composition(),q[npg_tracking::glossary::composition],"composi
 my $merge_dir = $r->run_dir . q[/] . $digest; 
 is ($base_obj->merge_dir,$merge_dir,'merge_dir correct');
 is ($base_obj->composition->digest, $digest, 'digest correct');
-
 
 SKIP: {
     my $irods_tmp_coll;
@@ -72,6 +73,15 @@ $irods->remove_collection($irods_tmp_coll) if ($irods_zone =~ /-dev/ && $env_set
   
 }
 
+my $commands = $r->_create_commands(library_digest_data());
+
+my $command_string = qq[$filename --rpt_list '11111:7:9;11112:8:9' --library_id 15756535 --library_type  'HiSeqX PCR free' --sample_id 2275905 --sample_name yemcha6089636 --sample_common_name 'Homo Sapien' --sample_accession_number EGAN00001386875 --study_id 4014 --study_name 'SEQCAP_WGS_GDAP_Chad' --study_title 'Genome Diversity in Africa Project: Chad' --study_accession_number EGAS00001001719 --aligned 1 --lims_id SQSCP --instrument_type HiSeqX --run_type paired158 --chemistry CCXX  --samtools_executable  samtools1   --run_dir  test_dir   --local --default_root_dir $IRODS_WRITE_PATH];
+
+is ($commands->[0]{'command'},$command_string,'library merge command is correct');
+
+
+
+
 sub add_irods_data {
     my $irods = shift;
     my $coll_name =  q[tmp_].$PID;
@@ -89,5 +99,104 @@ my $irods_cram_path = $irods_tmp_coll.q[/].basename($cram_filename);
 return($irods_tmp_coll);
 }
 
+sub library_digest_data {
+    my $data = {
+          '15756535' => {
+                          'HiSeqX' => {
+                                        'paired' => {
+                                                      'entities' => [
+                                                                      {
+                                                                        'status' => 'qc complete',
+                                                                        'library' => '15756535',
+                                                                        'study_title' => 'Genome Diversity in Africa Project: Chad',
+                                                                        'id_lims' => 'SQSCP',
+                                                                        'new_library_id' => 'DN431215P:E9',
+                                                                        'sample_name' => 'yemcha6089636',
+                                                                        'sample' => '2275905',
+                                                                        'sample_accession_number' => 'EGAN00001386875',
+                                                                        'study' => '4014',
+                                                                        'flowcell_barcode' => 'HJCFHCCXX',
+                                                                        'library_type' => 'HiSeqX PCR free',
+                                                                        'expected_cycles' => 308,
+                                                                        'cycles' => '310',
+                                                                        'sample_common_name' => 'Homo Sapien',
+                                                                        'study_accession_number' => 'EGAS00001001719',
+                                                                        'aligned' => '1',
+                                                                        'study_name' => 'SEQCAP_WGS_GDAP_Chad',
+                                                                        'rpt_key' => '19000:5:9',
+                                                                        'reference_genome' => 'Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla)'
+                                                                      },
+                                                                      {
+                                                                        'status' => 'qc complete',
+                                                                        'library' => '15756535',
+                                                                        'study_title' => 'Genome Diversity in Africa Project: Chad',
+                                                                        'id_lims' => 'SQSCP',
+                                                                        'new_library_id' => 'DN431215P:E9',
+                                                                        'sample_name' => 'yemcha6089636',
+                                                                        'sample' => '2275905',
+                                                                        'sample_accession_number' => 'EGAN00001386875',
+                                                                        'study' => '4014',
+                                                                        'flowcell_barcode' => 'HJK22CCXX',
+                                                                        'library_type' => 'HiSeqX PCR free',
+                                                                        'expected_cycles' => 308,
+                                                                        'cycles' => '310',
+                                                                        'sample_common_name' => 'Homo Sapien',
+                                                                        'study_accession_number' => 'EGAS00001001719',
+                                                                        'aligned' => '1',
+                                                                        'study_name' => 'SEQCAP_WGS_GDAP_Chad',
+                                                                        'rpt_key' => '19264:6:9',
+                                                                        'reference_genome' => 'Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla)'
+                                                                      },
+{
+                                                                        'status' => 'qc complete',
+                                                                        'library' => '15756535',
+                                                                        'study_title' => 'Genome Diversity in Africa Project: Chad',
+                                                                        'id_lims' => 'SQSCP',
+                                                                        'new_library_id' => 'DN431215P:E9',
+                                                                        'sample_name' => 'yemcha6089636',
+                                                                        'sample' => '2275905',
+                                                                        'sample_accession_number' => 'EGAN00001386875',
+                                                                        'study' => '4014',
+                                                                        'flowcell_barcode' => 'HJK22CCXX',
+                                                                        'library_type' => 'HiSeqX PCR free',
+                                                                        'expected_cycles' => 158,
+                                                                        'cycles' => '166',
+                                                                        'sample_common_name' => 'Homo Sapien',
+                                                                        'study_accession_number' => 'EGAS00001001719',
+                                                                        'aligned' => '1',
+                                                                        'study_name' => 'SEQCAP_WGS_GDAP_Chad',
+                                                                        'rpt_key' => '11111:7:9',
+                                                                        'reference_genome' => 'Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla)'
+                                                                      },
+                                                                      {
+                                                                        'status' => 'qc complete',
+                                                                        'library' => '15756535',
+                                                                        'study_title' => 'Genome Diversity in Africa Project: Chad',
+                                                                        'id_lims' => 'SQSCP',
+                                                                        'new_library_id' => 'DN431215P:E9',
+                                                                        'sample_name' => 'yemcha6089636',
+                                                                        'sample' => '2275905',
+                                                                        'sample_accession_number' => 'EGAN00001386875',
+                                                                        'study' => '4014',
+                                                                        'flowcell_barcode' => 'HJK22CCXX',
+                                                                        'library_type' => 'HiSeqX PCR free',
+                                                                        'expected_cycles' => 158,
+                                                                        'cycles' => '158',
+                                                                        'sample_common_name' => 'Homo Sapien',
+                                                                        'study_accession_number' => 'EGAS00001001719',
+                                                                        'aligned' => '1',
+                                                                        'study_name' => 'SEQCAP_WGS_GDAP_Chad',
+                                                                        'rpt_key' => '11112:8:9',
+                                                                        'reference_genome' => 'Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla)'
+                                                                      }
+                                                            ]
+                                                    }
+                                      }
+                              }
+                        };
 
+return $data;
+
+}
+ 
 1;
